--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 			</div>
 		</div>
 		<div class="container-fluid">
-			<div class="row">
+			<div class="row p-5">
 				<div class="scroll-container text-center" id="offers">
 					<div class="card">
 						<img src="img/coelsseum 03.JPG" alt="Colosseum">
